--- a/todo-ember/app/templates/application.hbs
+++ b/todo-ember/app/templates/application.hbs
@@ -1,7 +1,5 @@
-{{page-title "TodoEmber"}}
+{{page-title 'TodoEmber'}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<h1>Hello World</h1>
 
 {{outlet}}
