--- a/todo-ember/app/templates/application.hbs
+++ b/todo-ember/app/templates/application.hbs
@@ -1,7 +1,8 @@
-{{page-title "TodoEmber"}}
+{{page-title 'TodoEmber'}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<main>
+  <h1>To Do List</h1>
+  <TodoList />
+</main>
 
 {{outlet}}
